--- a/index.html
+++ b/index.html
@@ -1,32 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bella Olonje</title>
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="topbar">
-        <div class="topbar-logo"><img src="images/Bella Olonje logo 111 1.png" alt="Bella Olonje" /></div>
-        <ul class="topbar-menu">
-          <li class="topbar-menu__item">Home</li>
-          <li class="topbar-menu__item">Product</li>
-          <li class="topbar-menu__item">Faq</li>
-          <li class="topbar-menu__item">Contact</li>
-        </ul>
-      </div>
-      <div>
-        <div class="background-img"><img src="images/Rectangle 48.png" alt="Rectangle"></div>
-        <div class="text-download"><h2>Food app</h2></div>
-        <div class="text-order"><h1>Why stay hungry when you can order form Bella Onojie</h1></div>
-        <div class="text-download__1"><h2>Download the bella onoje’s food app now on</h2></div>
-        <div class="button">
-          <div><button>Playstore</button></div>
-          <div><button>App store</button></div>
+      <div class="container">
+        <div class="topbar-container">
+          <div class="topbar-logo">
+            <img src="images/Bella Olonje logo 111 1.png" alt="Bella Olonje" />
+          </div>
+          <ul class="topbar-menu">
+            <li class="topbar-menu__item">Home</li>
+            <li class="topbar-menu__item">Product</li>
+            <li class="topbar-menu__item">Faq</li>
+            <li class="topbar-menu__item">Contact</li>
+          </ul>
         </div>
+      </div>
     </div>
-</body>
+    <header class="header">
+      <div class="container">
+        <h1 class="header-title">
+          Why stay hungry when <br />
+          you can order form Bella Onojie
+        </h1>
+        <span class="header-description">
+          Download the bella onoje’s food app now on
+        </span>
+        <div class="header-buttons">
+          <button class="header-buttons__btn header-buttons__playstore">
+            Playstore
+          </button>
+          <button class="header-buttons__btn header-buttons__appstore">
+            App store
+          </button>
+        </div>
+      </div>
+    </header>
+    <section class="application-demo">
+      <div class="container">
+        <div class="application-demo__container">
+          <img
+            class="application-demo__img"
+            src="/images/Group 53 (1).png"
+            alt="application demo"
+          />
+          <hr class="application-demo__line" />
+        </div>
+      </div>
+    </section>
+    <section>lcnj;sbc;aiygc;iy</section>
+  </body>
 </html>
