create 2 new section

--- a/index.html
+++ b/index.html
@@ -70,10 +70,32 @@
           <img class="description-login__img" src="images/Rectangle (1).png" alt="description-login__img">
             <div class="description-login__start">
               <h3 class="description-text__login description-text__account">Create an account</h3>
-              <h1 class="description-text__login description-text__faststart">Create/login to an existing<br>
-              account to get started</h1>
-              <h4 class="description-text__login description-text__instruction">An account is created with your email<br>
-              and a desired password</h4>
+              <h1 class="description-text__login description-text__faststart">Create/login to an existing<br> account to get started</h1>
+              <h4 class="description-text__login description-text__instruction">An account is created with your email<br> and a desired password</h4>
+            </div>
+        </div>
+      </div>
+    </section>
+    <section class="interface-app">
+       <div class="container">
+         <div class="interface-app__description">
+           <div class="interface-app__item">
+             <h3 class="interface-app__explore">Explore varieties</h3>
+             <h1 class="interface-app__advantages">Shop for your favorites<br> as e dey hot.</h1>
+             <h4 class="interface-app__description">Shop for your favorite meals or drinks<br> and enjoy while doing it.</h4>
+            </div>
+            <img class="interface-app__img" src="images/Rectangle (2).png" alt="interface-app__img">
+          </div>
+      </div>
+    </section>
+    <section class="payment-info">
+      <div class="container">
+        <div class="payment-info__description">
+          <img class="payment-info__img" src="images/Rectangle 3.png" alt="payment-info__img">
+            <div class="payment-info__item">
+              <h3 class="payment-info__checkout">Checkout</h3>
+              <h1 class="payment-info__advantages">When you done check out<br> and get it delivered.</h1>
+              <h4 class="payment-info__deliver">When you done check out and get it<br> delivered with ease.</h4>
             </div>
         </div>
       </div>
