final progect reviev

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="images/Bella Olonje logo 111 1.png" alt="Bella Olonje" />
           </div>
           <ul class="topbar-menu">
-            <li class="topbar-menu__item">Home</li>
+            <li class="topbar-menu__item topbar-menu__home">Home</li>
             <li class="topbar-menu__item">Product</li>
             <li class="topbar-menu__item">Faq</li>
             <li class="topbar-menu__item">Contact</li>
@@ -100,5 +100,30 @@
         </div>
       </div>
     </section>
+    <section class="section">
+      <div class="container">
+        <h1 class="section-top">Download the app now.</h1>
+        <h2 class="section-row">Available on your favorite store. Start your premium experience now</h2>
+        <div class="section-buttons">
+          <button class="header-buttons__btn header-buttons__playstore">
+            Playstore
+          </button>
+          <button class="header-buttons__btn header-buttons__appstore">
+            App store
+          </button>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-icons">
+          <img class="footer-logo" src="images/Bella Olonje logo 111 1.png" alt="Bella Olonje">
+          <img class="footer-icons__items" src="images/Vector.png" alt="Twitter">
+          <img class="footer-icons__items" src="images/Vector (1).png" alt="Facebook">
+          <img class="footer-icons__items" src="images/Vector (3).png" alt="Instagram">
+          <span class="footer-text">Copywright 2020 Bella Onojie.com</span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
