--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="images/Bella Olonje logo 111 1.png" type="image/x-icon">
     <title>Bella Olonje</title>
     <link rel="stylesheet" href="style/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -17,13 +18,13 @@
       <div class="container">
         <div class="topbar-container">
           <div class="topbar-logo">
-            <img src="images/Bella Olonje logo 111 1.png" alt="Bella Olonje" />
+            <img src="images/Bella Olonje logo 111 1 (1).png" alt="Bella Olonje" />
           </div>
           <ul class="topbar-menu">
-            <li class="topbar-menu__item topbar-menu__home">Home</li>
-            <li class="topbar-menu__item">Product</li>
-            <li class="topbar-menu__item">Faq</li>
-            <li class="topbar-menu__item">Contact</li>
+            <li class="topbar-menu__item topbar-menu__home"><a class="topbar-menu__home" href="../bella-olonje-landing-page/index.html">Home</a></li>
+            <li class="topbar-menu__item"><a class="link-item" href="../bella-olonje-landing-page/index.html">Product</a></li>
+            <li class="topbar-menu__item"><a class="link-item" href="../bella-olonje-landing-page/index.html">Faq</a></li>
+            <li class="topbar-menu__item"><a class="link-item" href="../bella-olonje-landing-page/index.html">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -38,12 +39,8 @@
           Download the bella onoje’s food app now on
         </span>
         <div class="header-buttons">
-          <button class="header-buttons__btn header-buttons__playstore">
-            Playstore
-          </button>
-          <button class="header-buttons__btn header-buttons__appstore">
-            App store
-          </button>
+          <button class="header-buttons__btn header-buttons__playstore"><a class="link-btn" href="https://play.google.com/store">Playstore</a></button>
+          <button class="header-buttons__btn header-buttons__appstore"><a class="link-btn" href="https://www.apple.com/ua/app-store/">App store</a></button>
         </div>
       </div>
     </header>
@@ -59,69 +56,183 @@
         </div>
       </div>
     </section>
-    <section class="description">
-      <div class="container">
-        <h1 class="description-text">How the app works</h1>
-      </div>
-    </section>
-    <section class="description-login">
-      <div class="container">
-        <div class="header-description">
-          <img class="description-login__img" src="images/Rectangle (1).png" alt="description-login__img">
-            <div class="description-login__start">
-              <h3 class="description-text__login description-text__account">Create an account</h3>
-              <h1 class="description-text__login description-text__faststart">Create/login to an existing<br> account to get started</h1>
-              <h4 class="description-text__login description-text__instruction">An account is created with your email<br> and a desired password</h4>
+    <section class="description-section">
+      <div class="sm-container">
+        <h2 class="description-section__main-title">How the app works</h2>
+        <div class="description-section__row">
+          <div
+            class="description-section__column description-section__column-img"
+          >
+            <img
+              src="images/Rectangle (1).png"
+              alt="description-section__img"
+            />
+          </div>
+          <div
+            class="description-section__column description-section__column-info"
+          >
+            <div>
+              <span class="description-section__benefit-text"
+                >Create an account</span
+              >
+              <h2 class="description-section__title">
+                Create/login to an existing<br />
+                account to get started
+              </h2>
+              <p class="description-section__description">
+                An account is created with your email<br />
+                and a desired password
+              </p>
             </div>
+          </div>
         </div>
       </div>
     </section>
-    <section class="interface-app">
-       <div class="container">
-         <div class="interface-app__description">
-           <div class="interface-app__item">
-             <h3 class="interface-app__explore">Explore varieties</h3>
-             <h1 class="interface-app__advantages">Shop for your favorites<br> as e dey hot.</h1>
-             <h4 class="interface-app__description">Shop for your favorite meals or drinks<br> and enjoy while doing it.</h4>
-            </div>
-            <img class="interface-app__img" src="images/Rectangle (2).png" alt="interface-app__img">
+
+    <section class="description-section">
+      <div class="sm-container">
+        <div class="description-section__row reverse">
+          <div
+            class="description-section__column description-section__column-img"
+          >
+            <img
+              src="images/Rectangle (2).png"
+              alt="description-section__img"
+            />
           </div>
+          <div
+            class="description-section__column description-section__column-info"
+          >
+            <div>
+              <span class="description-section__benefit-text"
+                >Explore varieties</span
+              >
+              <h2 class="description-section__title">Shop for your favorites <br>meal as e dey hot.</h2>
+              <p class="description-section__description">Shop for your favorite meals or drinks <br>and enjoy while doing it.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="description-section">
+      <div class="sm-container">
+        <div class="description-section__row">
+          <div
+            class="description-section__column description-section__column-img"
+          >
+            <img
+              src="images/Rectangle 3.png"
+              alt="description-section__img"
+            />
+          </div>
+          <div
+            class="description-section__column description-section__column-info"
+          >
+            <div>
+              <span class="description-section__benefit-text"
+                >Checkout</span
+              >
+              <h2 class="description-section__title">
+                When you done check out <br>and get it delivered.
+              </h2>
+              <p class="description-section__description">
+                When you done check out and get it <br>delivered with ease.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- <section class="interface-app">
+      <div class="container">
+        <div class="sm-container">
+          <div class="interface-app__description">
+            <div class="interface-app__img">
+              <img src="images/Rectangle (2).png" alt="interface-app__img" />
+            </div>
+            <div class="interface-app__items">
+              <h3 class="description-section__item__top">Explore varieties</h3>
+              <h1 class="description-section__item__middle">
+                Shop for your favorites<br />
+                as e dey hot.
+              </h1>
+              <span class="description-section__item__bottom">
+                Shop for your favorite meals or drinks<br />
+                and enjoy while doing it.
+              </span>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section class="payment-info">
       <div class="container">
         <div class="payment-info__description">
-          <img class="payment-info__img" src="images/Rectangle 3.png" alt="payment-info__img">
-            <div class="payment-info__item">
-              <h3 class="payment-info__checkout">Checkout</h3>
-              <h1 class="payment-info__advantages">When you done check out<br> and get it delivered.</h1>
-              <h4 class="payment-info__deliver">When you done check out and get it<br> delivered with ease.</h4>
-            </div>
+          <img
+            class="payment-info__img"
+            src="images/Rectangle 3.png"
+            alt="payment-info__img"
+          />
+          <div class="payment-info__item">
+            <h3 class="payment-info__checkout">Checkout</h3>
+            <h1 class="payment-info__advantages">
+              When you done check out<br />
+              and get it delivered.
+            </h1>
+            <span class="payment-info__deliver">
+              When you done check out and get it<br />
+              delivered with ease.
+            </span>
+          </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <section class="section">
       <div class="container">
         <h1 class="section-top">Download the app now.</h1>
-        <h2 class="section-row">Available on your favorite store. Start your premium experience now</h2>
+        <h2 class="section-row">
+          Available on your favorite store. Start your premium experience now
+        </h2>
         <div class="section-buttons">
-          <button class="header-buttons__btn header-buttons__playstore">
+          <button class="header-buttons__btn header-buttons__playstore"><a class="link-btn" href="https://play.google.com/store">
             Playstore
-          </button>
-          <button class="header-buttons__btn header-buttons__appstore">
+          </a></button>
+          <button class="header-buttons__btn header-buttons__appstore"><a class="link-btn" href="https://www.apple.com/ua/app-store/">
             App store
-          </button>
+          </a></button>
         </div>
       </div>
     </section>
     <footer class="footer">
       <div class="container">
         <div class="footer-icons">
-          <img class="footer-logo" src="images/Bella Olonje logo 111 1.png" alt="Bella Olonje">
-          <img class="footer-icons__items" src="images/Vector.png" alt="Twitter">
-          <img class="footer-icons__items" src="images/Vector (1).png" alt="Facebook">
-          <img class="footer-icons__items" src="images/Vector (3).png" alt="Instagram">
-          <span class="footer-text">Copywright 2020 Bella Onojie.com</span>
+          <a href="../bella-olonje-landing-page/index.html"><img
+            class="footer-logo"
+            src="images/Bella Olonje logo 111 1 (1) (1).png"
+            alt="Bella Olonje"
+          /></a>
+          <a href="https://twitter.com/home?lang=ru">
+            <img
+            class="footer-icons__items"
+            src="images/Vector.png"
+            alt="Twitter"
+          />
+          </a>
+          <a href="https://facebook.com/">
+            <img
+            class="footer-icons__items"
+            src="images/Vector (1).png"
+            alt="Facebook"
+          />
+          </a>
+          <a href="https://www.instagram.com/">
+            <img
+            class="footer-icons__items"
+            src="images/Vector 4.png"
+            alt="Instagram"
+          />
+          </a>
+          <p class="footer-text"><a class="link-item" href="../bella-olonje-landing-page/index.html">Copywright 2020 Bella Onojie.com</a></p>
         </div>
       </div>
     </footer>
