fix: renamed class and fix big padding

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <img src="images/Bella Olonje logo 111 1 (1).png" alt="Bella Olonje" />
           </div>
           <ul class="topbar-menu">
-            <li class="topbar-menu__item topbar-menu__home"><a class="topbar-menu__home" href="../bella-olonje-landing-page/index.html">Home</a></li>
-            <li class="topbar-menu__item"><a class="link-item" href="../bella-olonje-landing-page/index.html">Product</a></li>
-            <li class="topbar-menu__item"><a class="link-item" href="../bella-olonje-landing-page/index.html">Faq</a></li>
-            <li class="topbar-menu__item"><a class="link-item" href="../bella-olonje-landing-page/index.html">Contact</a></li>
+            <li class="topbar-menu__item topbar-menu__home"><a class="topbar-menu__home" href="/">Home</a></li>
+            <li class="topbar-menu__item"><a class="link-item" href="/">Product</a></li>
+            <li class="topbar-menu__item"><a class="link-item" href="/">Faq</a></li>
+            <li class="topbar-menu__item"><a class="link-item" href="/">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -59,7 +59,7 @@
     <section class="description-section">
       <div class="sm-container">
         <h2 class="description-section__main-title">How the app works</h2>
-        <div class="description-section__row">
+        <div class="description-section__columns">
           <div
             class="description-section__column description-section__column-img"
           >
@@ -91,7 +91,7 @@
 
     <section class="description-section">
       <div class="sm-container">
-        <div class="description-section__row reverse">
+        <div class="description-section__columns reverse">
           <div
             class="description-section__column description-section__column-img"
           >
@@ -116,7 +116,7 @@
     </section>
     <section class="description-section">
       <div class="sm-container">
-        <div class="description-section__row">
+        <div class="description-section__columns">
           <div
             class="description-section__column description-section__column-img"
           >
@@ -143,98 +143,57 @@
         </div>
       </div>
     </section>
-    <!-- <section class="interface-app">
+    <section class="section-benefits">
       <div class="container">
-        <div class="sm-container">
-          <div class="interface-app__description">
-            <div class="interface-app__img">
-              <img src="images/Rectangle (2).png" alt="interface-app__img" />
-            </div>
-            <div class="interface-app__items">
-              <h3 class="description-section__item__top">Explore varieties</h3>
-              <h1 class="description-section__item__middle">
-                Shop for your favorites<br />
-                as e dey hot.
-              </h1>
-              <span class="description-section__item__bottom">
-                Shop for your favorite meals or drinks<br />
-                and enjoy while doing it.
-              </span>
-            </div>
+        <div class="section-benefit__text">
+          <h2 class="section-benefit__dwn">Download the app now.</h2>
+          <h3 class="section-benefit__description">
+            Available on your favorite store. Start your premium experience now
+          </h3>
+          <div class="section-buttons">
+            <button class="header-buttons__btn header-buttons__playstore"><a class="link-btn" href="https://play.google.com/store">
+              Playstore
+            </a></button>
+            <button class="header-buttons__btn header-buttons__appstore"><a class="link-btn" href="https://www.apple.com/ua/app-store/">
+              App store
+            </a></button>
           </div>
-        </div>
-      </div>
-    </section>
-    <section class="payment-info">
-      <div class="container">
-        <div class="payment-info__description">
-          <img
-            class="payment-info__img"
-            src="images/Rectangle 3.png"
-            alt="payment-info__img"
-          />
-          <div class="payment-info__item">
-            <h3 class="payment-info__checkout">Checkout</h3>
-            <h1 class="payment-info__advantages">
-              When you done check out<br />
-              and get it delivered.
-            </h1>
-            <span class="payment-info__deliver">
-              When you done check out and get it<br />
-              delivered with ease.
-            </span>
-          </div>
-        </div>
-      </div>
-    </section> -->
-    <section class="section">
-      <div class="container">
-        <h1 class="section-top">Download the app now.</h1>
-        <h2 class="section-row">
-          Available on your favorite store. Start your premium experience now
-        </h2>
-        <div class="section-buttons">
-          <button class="header-buttons__btn header-buttons__playstore"><a class="link-btn" href="https://play.google.com/store">
-            Playstore
-          </a></button>
-          <button class="header-buttons__btn header-buttons__appstore"><a class="link-btn" href="https://www.apple.com/ua/app-store/">
-            App store
-          </a></button>
         </div>
       </div>
     </section>
     <footer class="footer">
-      <div class="container">
         <div class="footer-icons">
-          <a href="../bella-olonje-landing-page/index.html"><img
-            class="footer-logo"
-            src="images/Bella Olonje logo 111 1 (1) (1).png"
-            alt="Bella Olonje"
-          /></a>
-          <a href="https://twitter.com/home?lang=ru">
-            <img
-            class="footer-icons__items"
-            src="images/Vector.png"
-            alt="Twitter"
-          />
-          </a>
-          <a href="https://facebook.com/">
-            <img
-            class="footer-icons__items"
-            src="images/Vector (1).png"
-            alt="Facebook"
-          />
-          </a>
-          <a href="https://www.instagram.com/">
-            <img
-            class="footer-icons__items"
-            src="images/Vector 4.png"
-            alt="Instagram"
-          />
-          </a>
-          <p class="footer-text"><a class="link-item" href="../bella-olonje-landing-page/index.html">Copywright 2020 Bella Onojie.com</a></p>
+            <div class="footer-logo">
+              <a href="/"><img
+                src="images/Bella Olonje logo 111 1 (1) (1).png"
+                alt="Bella Olonje"
+              /></a>
+            </div>
+            <div>
+              <a href="https://twitter.com/home?lang=ru">
+                <img
+                class="footer-icon__social"
+                src="images/Vector.png"
+                alt="Twitter"
+              />
+              </a>
+              <a href="https://facebook.com/">
+                <img
+                class="footer-icon__social"
+                src="images/Vector (1).png"
+                alt="Facebook"
+              />
+              </a>
+              <a href="https://www.instagram.com/">
+                <img
+                class="footer-icon__social"
+                src="images/Vector 4.png"
+                alt="Instagram"
+              />
+              </a>
+            </div>
+          <p class="footer-link"><a class="link-item" href="/">Copywright 2020 Bella Onojie.com</a></p>
         </div>
-      </div>
     </footer>
   </body>
 </html>
